--- a/Style.css
+++ b/Style.css
@@ -146,8 +146,9 @@ nav ul .hebergement{
 
 }
 
-header h2{
+header h1{
 	margin-bottom: 0%;
+	font-size: 1.1em;
 }
 
 header p{
@@ -200,6 +201,10 @@ header p{
 	border-bottom-right-radius: 10px;
 	color: white;
 
+}
+
+.loupe{
+	display: none;
 }
 
 .bouton:hover{
@@ -507,6 +512,7 @@ footer a, section a{
 }
 
 .img_grand img{
+
 	width: 100%;
 	height:400px;
 	object-fit: cover;
@@ -515,6 +521,7 @@ footer a, section a{
 }
 
 .img_moyen img{
+
 	width: 100%;
 	height: 180px;
 	object-fit: cover;
@@ -523,6 +530,7 @@ footer a, section a{
 }
 
 .img_petit img{
+
 	width: 100%;
 	height: 120px;
 	object-fit: cover;
@@ -545,6 +553,7 @@ footer a, section a{
 	border-bottom-left-radius: 20px;
 	border-bottom-right-radius: 20px;
 	box-shadow: 3px 3px 15px #D3D5D5;
+	/*background-color: red;*/
 
 }
 
@@ -590,7 +599,7 @@ footer a, section a{
 
 
 
-@media screen and (min-width: 800px) and (max-width: 1247px){
+@media screen and (min-width: 426px) and (max-width: 1247px){
 
 
 body{
@@ -663,7 +672,7 @@ nav ul li{
 
 }
 
-.text_accroche h2{
+.text_accroche h1{
 
 	font-size: 1.1em;
 
@@ -737,6 +746,10 @@ nav ul li{
 	border-bottom-right-radius: 10px;
 	color: white;
 
+}
+
+.loupe{
+	display: none;
 }
 
 .groupe, .groupe_animaux{
@@ -913,7 +926,7 @@ nav ul li{
 	top: -15px;
 	margin-bottom: 0px;
 	margin-left: 5px;
-	font-size: 0.9em;
+	font-size: 0.7em;
 }
 
 .Site p{
@@ -1003,7 +1016,7 @@ nav ul li{
 
 .texte_populaire h4{
 	position: relative;
-	font-size: 0.8em;
+	font-size: 0.7em;
 	top:-10px;
 }
 
@@ -1143,7 +1156,7 @@ footer a, section a{
 
 
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 426px){
 
 body{
 
@@ -1165,7 +1178,7 @@ body{
 .bluecolor{
 
 	position: absolute;
-	margin-left: 75%;
+	margin-left: 60%;
 	top: 7%;
 	font-size: 100%;
 	list-style-type: none;
@@ -1229,6 +1242,12 @@ nav ul {
 
 }
 
+.text_accroche h1{
+
+	font-size: 0.7em;
+
+}
+
 .text_accroche h2{
 
 	font-size: 0.9em;
@@ -1265,6 +1284,8 @@ nav ul {
 
 .localisation{
 
+	position: relative;
+	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -1274,14 +1295,15 @@ nav ul {
 
 .icone{
 
-	width: 30px;
-	height: 30px;
-	line-height: 30px;
+
+	width: 41px;
+	height: 41px;
+	line-height: 41px;
 	text-align: center;
 	margin-right: 5px;
 	background-color: #F2F2F2;
-	border-top-left-radius: 20px;
-	border-bottom-left-radius: 20px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 
 }
 
@@ -1289,7 +1311,7 @@ nav ul {
 .ztexte{
 
 	position: relative;
-	height: 23px;
+	height: 35px;
 	left: -5px;
 	border-style: solid;
 	border-color: #F2F2F2;
@@ -1297,19 +1319,26 @@ nav ul {
 	font-weight: bold;
 
 
+
 }
 
 .bouton{
 
+	display: none;
+
+}
+
+.loupe{
+
 	position: relative;
-	left: -9px;
-	height: 28px;
-	width: 100px;
-	border:4px solid #0065FC;
+	left: -10px;
+	width: 41px;
+	height: 41px;
+	line-height: 41px;
 	background-color: #0065FC;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
 	color: white;
+	text-align: center;
+	border-radius: 13px;
 
 }
 
@@ -1320,7 +1349,7 @@ nav ul {
 	margin-left: 5%;
 	border:2px solid #F2F2F2;
 	border-radius: 20px;
-	width: 32%;
+	width: auto;
 	height: auto;
 
 
@@ -1411,10 +1440,12 @@ nav ul {
 
 .liste_filtre{
 
-	width: 100%;
+	width: 65%;
+	margin-left: 17%;
 	height: 5%;
 	padding-top: 10px;
 	display: flex;
+	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: center;
 
@@ -1425,7 +1456,7 @@ nav ul {
 	align-items: center;
 	justify-content: center;
 	margin-top: 15px;
-	font-size: 0.9em;
+	font-size: 0.7em;
 }
 
 .icone_info{
@@ -1449,7 +1480,7 @@ nav ul {
 	border-radius: 10px;
 	margin-bottom: 20px;
 	margin-top: 15px;
-	margin-left: 15px;
+	margin-left: 7px;
 	padding-top: 15px;
 	display: flex;
 	align-items: left;
@@ -1540,7 +1571,7 @@ nav ul {
 
 .populaire{
 
-	height:500px;
+	height:530px;
 	border:2px solid #F2F2F2;
 	background-color: #F2F2F2;
 	border-radius: 10px;
