--- a/Style.css
+++ b/Style.css
@@ -80,8 +80,8 @@ p{
 .menu ul{
 
 	position: relative;
-	left: -90%;
 	width: 200%;
+	left: -90%;
 	display: flex;
 	margin:0px;
 	padding: 0px;
@@ -98,8 +98,11 @@ p{
 
 nav ul li{
 
+	position: relative;
 	padding-top: 40px;
 	font-size: 0.8em;
+	width: 50%;
+	text-align: center;
 
 }
 
@@ -107,7 +110,6 @@ nav ul .hebergement{
 	border-top: 2px solid #0065FC;
 	padding-bottom: 2px;
 	text-align: center;
-	width:60%;
 	
 }
 
@@ -646,6 +648,7 @@ nav ul {
 nav ul li{
 
 	margin: auto;
+	text-align: center;
 
 }
 
@@ -1197,6 +1200,9 @@ nav ul {
 
 	list-style-type: none;
 	text-decoration: none;
+	display: flex;
+	text-align: center;
+	align-items: center;
 
 }
 
@@ -1221,19 +1227,6 @@ nav ul {
 	border-bottom: 2px solid #F2F2F2;
 
 }
-
-
-.test{
-
-	position: relative;
-	width: 110%;
-	left: -42px;
-	display: flex;
-	justify-content: space-between;
-	text-align: center;
-	padding-left: 0px;
-}
-
 
 .text_accroche{
 
