--- a/Style.css
+++ b/Style.css
@@ -601,7 +601,7 @@ footer a, section a{
 
 
 
-@media screen and (min-width: 426px) and (max-width: 1247px){
+@media screen and (min-width: 700px) and (max-width: 1247px){
 
 
 body{
@@ -1159,7 +1159,7 @@ footer a, section a{
 
 
 
-@media screen and (max-width: 426px){
+@media screen and (min-width: 400px) and (max-width: 699px){
 
 body{
 
@@ -1503,6 +1503,616 @@ nav ul {
 .Site{
 
 	
+	width: 100%;
+	height: 185px;
+	background-color: #FFFFFF;
+	border-radius: 10px;
+	padding: 3px;
+	box-shadow: 3px 3px 10px #D3D5D5;
+	text-align: left;
+	margin-bottom: 20px;
+
+}
+
+.hebergement2{
+	position: relative;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.images img{
+	width: 100%;
+	height: 115px;
+	object-fit: cover;
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
+}
+
+.Site h4{
+	position: relative;
+	top: -15px;
+	margin-bottom: 0px;
+	margin-left: 5px;
+	font-size: 0.9em;
+}
+
+.Site p{
+	position: relative;
+	top: -20px;
+	font-size: 0.7em;
+	margin-left: 5px;
+}
+
+.etoile{
+	position: relative;
+	top: -25px;
+	font-size: 0.6em;
+	margin-left: 5px;
+}
+
+.bleu{
+
+	color: #0065FC;
+}
+
+.gris{
+
+	color: #D9E0DF;
+}
+
+.populaire{
+
+	height:530px;
+	border:2px solid #F2F2F2;
+	background-color: #F2F2F2;
+	border-radius: 10px;
+	margin-top: 2%;
+	padding-top: 15px;
+	padding-left: 2.5%;
+	padding-bottom: 32px;
+	display: flex;
+	flex-direction: column;
+	align-items: left;
+
+
+}
+
+.titre_aside{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding-right: 30px; 
+	margin-bottom: 25px;
+}
+
+.titre_aside h3{
+
+	margin-right: 60px;
+
+}
+
+.Site_populaire{
+
+	position: relative;
+	display: flex;
+	background-color: #FFFFFF;
+	width: 70%;
+	height: 120px;
+	border-radius: 10px;
+	margin-bottom: 25px;
+	margin-left:10%;
+	box-shadow: 3px 3px 15px #D3D5D5;
+	padding: 3px;
+
+}
+
+.ensemble_populaire{
+
+	
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+
+}
+
+.image_site_populaire img{
+
+	width: 100px;
+	height: 120px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	object-fit: cover;
+	margin-right: 15px;
+
+}
+
+.texte_populaire h4{
+	position: relative;
+	font-size: 0.8em;
+	top:-10px;
+}
+
+.texte_populaire p{
+	position: relative;
+	font-size: 0.7em;
+	top:-20px;
+}
+
+.etoile_populaire{
+
+	position: relative;
+	font-size: 0.6em;
+	top: 15px;
+
+}
+
+footer a, section a{
+	text-decoration: none;
+	color: black;
+}
+
+.section2 h3{
+
+	margin-left: 15px;
+
+}
+
+.groupe_activité{
+
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-bottom: 20px;
+}
+
+.img_grand img{
+	width: 100%;
+	height:100px;
+	object-fit: cover;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+
+.img_moyen img{
+	width: 100%;
+	height: 100px;
+	object-fit: cover;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+
+.img_petit img{
+	width: 100%;
+	height: 100px;
+	object-fit: cover;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+}
+
+.Activités{
+	width: 95%;
+}
+
+.titre_activité{
+
+	position: relative;
+	top: -25px;
+	padding-left: 20px;
+	text-align: left;
+	height: 50px;
+	font-size: 0.7em;
+	line-height: 50px;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
+	box-shadow: 3px 3px 15px #D3D5D5;
+
+}
+
+.bas_page{
+
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	background-color:#F2F2F2;
+
+}
+
+.bas_page h4{
+
+	font-size: 0.8em;
+
+}
+
+.bas_page p{
+
+	font-size: 0.7em;
+
+}
+
+.sous_groupe{
+
+	text-align: left;
+	margin-left: 20px;
+	
+}
+
+.p1{
+	position: relative;
+	top: -10px;
+}
+
+.p2{
+	position: relative;
+	top: -12px;
+}
+
+.p3{
+	position: relative;
+	top: -15px;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 400px){
+
+body{
+
+	position: relative;
+	width: 95%;
+	margin: auto;
+	font-family: 'Raleway', sans-serif;
+
+}
+
+.hautPage{
+
+	position: relative;
+	width: 100%;
+	margin-bottom: 30px;
+	
+}
+
+.bluecolor{
+
+	position: absolute;
+	margin-left: 60%;
+	top: 7%;
+	font-size: 100%;
+	list-style-type: none;
+	text-decoration: none;
+
+}
+
+.hautPage img{
+	width: 15%;
+	height: 8%;
+	padding-left: 20px;
+
+}
+
+nav ul {
+
+	list-style-type: none;
+	text-decoration: none;
+	display: flex;
+	text-align: center;
+	align-items: center;
+
+}
+
+
+.hebergement, .activites{
+
+	position: relative;
+	font-size: 70%;
+	width:50%;
+	padding-bottom: 20px;
+	
+}
+
+.hebergement{
+
+	border-bottom: 2px solid #0065FC;
+
+}
+
+.activites{
+
+	border-bottom: 2px solid #F2F2F2;
+
+}
+
+.text_accroche{
+
+	width: 100%;
+	text-align: center;
+
+}
+
+.text_accroche h1{
+
+	font-size: 0.7em;
+
+}
+
+.text_accroche h2{
+
+	font-size: 0.9em;
+
+}
+
+.text_accroche p{
+
+	font-size: 0.7em;
+
+}
+
+.fleche{
+
+	z-index: 20;
+	width: 20px;
+	height: 20px;
+	line-height: 20px;
+	text-align: center;
+	margin-left: 90%;
+	font-size: 0.8em;
+	top: 47px;
+	border:2px solid #F2F2F2;
+	background-color: #F2F2F2;
+	border-radius: 40px;
+	position: fixed;
+}
+
+.fleche:hover.fleche{
+
+	border:2px solid black;
+
+}
+
+.localisation{
+
+	position: relative;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+}
+
+.icone{
+
+	width: 41px;
+	height: 41px;
+	line-height: 41px;
+	text-align: center;
+	margin-right: 5px;
+	background-color: #F2F2F2;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+
+}
+
+
+.ztexte{
+
+	position: relative;
+	height: 35px;
+	left: -5px;
+	border-style: solid;
+	border-color: #F2F2F2;
+	padding-left: 10px;
+	font-weight: bold;
+
+
+
+}
+
+.bouton{
+
+	display: none;
+
+}
+
+.loupe{
+
+	position: relative;
+	left: -10px;
+	width: 41px;
+	height: 41px;
+	line-height: 41px;
+	background-color: #0065FC;
+	color: white;
+	text-align: center;
+	border-radius: 13px;
+
+}
+
+.groupe, .groupe_animaux{
+
+	display: flex;
+	margin-bottom: 10px;
+	margin-left: 5%;
+	border:2px solid #F2F2F2;
+	border-radius: 20px;
+	width: auto;
+	height: auto;
+
+
+}
+
+.groupe:hover .icone_groupe{
+
+	font-size: 1.6em;
+	transition: all 0.5s;
+
+}
+
+.groupe_animaux:hover .icone_groupe{
+
+	font-size: 1.6em;
+	transition: all 0.5s;
+
+}
+
+.groupe:hover.groupe{
+	background-color:#EEEEEE;
+	transition: all 0.5s;
+	border-color: black;
+}
+
+.groupe_animaux:hover.groupe_animaux{
+	background-color:#EEEEEE;
+	transition: all 0.5s;
+	border-color: black;
+}
+.groupe:hover.groupe input{
+	cursor: pointer;
+
+}
+
+.groupe_animaux:hover input{
+	cursor: pointer;
+
+}
+
+.icone_groupe i{
+
+	position: relative;
+	width: 35px;
+	height: 35px;
+	line-height: 35px;
+	text-align: center;
+	background-color: #F2F2F2;
+	border-radius: 40px;
+	color: #0065FC;
+	left: -0.5px;
+
+
+}
+
+.filtres input{
+
+	width: 75%;
+	text-align: left;
+	border:none;
+	margin-left: 3%;
+	font-size: 0.7em;
+	background-color: transparent;
+
+}
+
+.bouton_filtre{
+
+	border-radius: 20px;
+
+}
+
+.filtres{
+
+	margin-top: 25px;
+	width: 100%;
+	align-items: center;
+	text-align: center;
+
+}
+
+.filtres p{
+
+	font-weight: bold;
+
+}
+
+
+.liste_filtre{
+
+	width: 65%;
+	margin-left: 17%;
+	height: 5%;
+	padding-top: 10px;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: center;
+
+}
+
+.info{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 15px;
+	font-size: 0.7em;
+}
+
+.icone_info{
+
+	position: relative;
+	width: 20px;
+	height: 20px;
+	margin-right: 2%;
+	text-align: center;
+	line-height: 20px;
+	border:2px solid #F2F2F2;
+	color: #0065FC;
+	border-radius: 40px;
+}	
+
+.art_hebergement{
+
+
+	position: relative;
+	width: 92%;
+	border-radius: 10px;
+	margin-bottom: 20px;
+	margin-top: 15px;
+	margin-left: 7px;
+	padding-top: 15px;
+	display: flex;
+	align-items: left;
+	flex-direction: column;
+	justify-content: flex-start;
+
+
+}
+
+
+.section1{
+	display: flex;
+	flex-direction: column-reverse;
+}
+
+.hebergement1{
+
+	position: relative;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 40px;
+	justify-content: space-between;
+
+}
+
+.Site{
+
 	width: 100%;
 	height: 185px;
 	background-color: #FFFFFF;
