--- a/Style.css
+++ b/Style.css
@@ -458,6 +458,7 @@ span{
 	margin-right: 30px;
 	border-radius: 10px;
 	margin-bottom: 40px;
+	padding: 3px;
 	box-shadow: 3px 3px 15px #D3D5D5;
 
 
