--- a/Style.css
+++ b/Style.css
@@ -34,6 +34,12 @@ a:visited{
 
 }
 
+h5{
+
+	font-weight: normal;
+
+}
+
 @media screen and (min-width: 1247px){
 
 body{
@@ -321,10 +327,9 @@ header p{
 
 .icone_info{
 	position: relative;
-	top: -4px;
 	width: 20px;
 	height: 20px;
-	margin-right: 2%;
+	margin-right: 1%;
 	text-align: center;
 	line-height: 20px;
 	border:2px solid #F2F2F2;
@@ -642,7 +647,6 @@ nav ul {
 	list-style-type: none;
 	text-decoration: none;
 	display: flex;
-	padding:auto;
 
 }
 
@@ -1468,7 +1472,6 @@ nav ul {
 
 .art_hebergement{
 
-
 	position: relative;
 	width: 92%;
 	border-radius: 10px;
@@ -1477,7 +1480,6 @@ nav ul {
 	margin-left: 7px;
 	padding-top: 15px;
 	display: flex;
-	align-items: left;
 	flex-direction: column;
 	justify-content: flex-start;
 
@@ -1575,8 +1577,6 @@ nav ul {
 	padding-bottom: 32px;
 	display: flex;
 	flex-direction: column;
-	align-items: left;
-
 
 }
 
@@ -2088,7 +2088,6 @@ nav ul {
 	margin-left: 7px;
 	padding-top: 15px;
 	display: flex;
-	align-items: left;
 	flex-direction: column;
 	justify-content: flex-start;
 
