--- a/Style.css
+++ b/Style.css
@@ -969,6 +969,7 @@ nav ul li{
 	border-radius: 10px;
 	margin-top: 2%;
 	padding-top: 15px;
+	margin-bottom: 30px;
 	padding-left: 2.5%;
 	padding-bottom: 32px;
 
@@ -1055,7 +1056,7 @@ footer a, section a{
 	height: 460px;
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 50px;
+	/*margin-bottom: 20px;*/
 }
 
 .moyen{
