--- a/Style.css
+++ b/Style.css
@@ -820,11 +820,12 @@ nav ul li{
 .icone_groupe i{
 
 	position: relative;
+	left: -2px;
 	width: 35px;
 	height: 35px;
 	line-height: 35px;
 	text-align: center;
-	background-color: #F2F2F2;
+	background-color: #DEEBFF;
 	border-radius: 40px;
 	color: #0065FC;
 
@@ -1405,7 +1406,7 @@ nav ul {
 	height: 35px;
 	line-height: 35px;
 	text-align: center;
-	background-color: #F2F2F2;
+	background-color: #DEEBFF;
 	border-radius: 40px;
 	color: #0065FC;
 	left: -0.5px;
@@ -2012,7 +2013,7 @@ nav ul {
 	height: 35px;
 	line-height: 35px;
 	text-align: center;
-	background-color: #F2F2F2;
+	background-color: #DEEBFF;
 	border-radius: 40px;
 	color: #0065FC;
 	left: -0.5px;
